sandbox/output
StringCalculator.java:10: error: incompatible types: char cannot be converted to String
            splitChar = numbers.charAt(2);
                                      ^
1 error
